feat: flatten authorization data structure to handle permission events